...

object CreateWGScreenConstants {
    const val BACK = "Zurück"
    const val APP_LOGO = "WGeplant Logo"
    const val APP_TITLE_PART1 = "WG"
    const val APP_TITLE_PART2 = "eplant"
    const val WG_NAME = "WG-Name"
    const val CREATE_WG = "WG erstellen"
    const val LOADING_INDICATOR_TEST_TAG = "loading_indicator"
    const val CREATE_WG_BUTTON_TEST_TAG = "create_wg_button"
    const val MAX_DISPLAY_NAME_LENGTH = 15
}

...
