...
import com.wgeplant.ui.theme.WGeplantTheme

object ChooseWGScreenConstants {
    const val GREETING = "Hallo "
    const val SMILEY = " :)"
    const val CHOOSE_OPTION_TEXT = "Willst du ..."
    const val JOIN_WG = "Einer WG beitreten"
    const val CREATE_WG = "Eine neue WG erstellen"
    const val STANDARD_PROFILE_ICON = "Standard Profil-Icon"
    const val USER_PROFILE_PICTURE = "Nutzerprofilbild"
}

/**
...
